{
  "title": "Welcome to Hoard",
  "current_lang": "The current language of choice is \"{{language}}\"",
  "token": {
    "one": "1 Token",
    "other": "{{count}} Tokens",
    "zero": "0 Tokens"
  },
  "input_username" : "Username or Email",
  "input_password" : "Password",
  "login" : {
    "log_in" : "Log In",
    "log_in_button" : "NEXT",
    "cant_log_in" : "Can't Log In?",
    "new_sign_up": "New to Hoard? Sign Up!",
    "skip_sign_up": "No thanks, I just want to use the wallet"
  },
  "transaction_status" : {
    "contact_transaction" : {
      "heading" : "Pending",
      "request_subheading" : "This user has been notified that you have requested funds from them!",
      "send_subheading" : "This user does not use Hoard, but has been notified that you have attempted to send them some funds!"
    },
    "blockchain_transaction" : {
      "pending_heading" : "Sending...",
      "success_heading" : "Success!",
      "failure_heading" : "Error",
      "success_subheading" : "Your transaction is pending.",
      "failure_subheading" : "Oops! Something went wrong. Please try again soon."
    }
  },
  "loading" : {
    "app_initialization" : "Initializing App",
    "transaction_hydration" : "Fetching Transactions",
    "price_initialization" : "Structuring Prices",
    "wallet_hydration" : "Setting Up Wallets",
    "loading_finished" : "Reticulating Splines"
  }
}
